--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -21,7 +21,7 @@
     margin-bottom: 1em;
 }
 
-.hw1 {
-    max-width: 116em;
-    margin: 0 auto;
-}
+/*.hw1, .hw2 {*/
+/*    max-width: 116em;*/
+/*    margin: 0 auto;*/
+/*}*/
