fix 3 task with css

--- a/src/s2-homeworks/hw02/affairs/affair/Affair.module.css
+++ b/src/s2-homeworks/hw02/affairs/affair/Affair.module.css
@@ -14,7 +14,7 @@
     padding-left: 14px;
     width: 145px;
     height: 37px;
-    font-family: Montserrat;
+    font-family: Montserrat, sans-serif;
     font-size: 16px;
     font-weight: 500;
     line-height: 20px;
