--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -42,7 +42,7 @@
 
 .friendName {
     color: #000000;
-    font-family: Montserrat sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 1.8em;
     font-weight: 600;
     line-height: 22px;
@@ -50,7 +50,7 @@
 
 .friendMessageText {
     color: #000000;
-    font-family: Montserrat sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 1.6em;
     font-weight: 400;
     line-height: 2em;
