--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -45,7 +45,7 @@
 
 .name {
     color: #FFFFFF;
-    font-family: Montserrat sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 1.8em;
     font-weight: 600;
     line-height: 22px;
@@ -53,7 +53,7 @@
 
 .messageText {
     color: #FFFFFF;
-    font-family: Montserrat sans-serif;
+    font-family: Montserrat, sans-serif;
     font-size: 1.6em;
     font-weight: 400;
     line-height: 2em;
