--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -1,35 +1,87 @@
 .greetingForm {
+    margin-bottom: 30px;
 }
 
 .inputAndButtonContainer {
+    display: flex;
 }
 
 .error {
+    font-family: Montserrat, sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 17px;
+    color: #CC0000;
 }
 
-.input {
+input {
+    width: 372px;
+    height: 36px;
+    border-radius: 5px;
+    border: 1px solid #D1D1D1;
+    margin-right: 12px;
+    margin-bottom: 7px;
+    font-family: Montserrat, sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 20px;
+    letter-spacing: 0em;
+    padding-left: 12px;
+
 }
 
 .input:focus {
+
 }
 
 .errorInput {
+    border: 1px solid #CC0000;
 }
 
 .button {
+    cursor: pointer;
+    height: 36px;
+    padding: 8px 24px;
+    background: #0066CC;
+    opacity: 1;
+    border-radius: 3px;
+    color: #FFFFFF;
+    border: none;
+    font-family: Montserrat, sans-serif;
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 20px;
+    letter-spacing: 0em;
 }
 
 .button:focus {
+    opacity: 1;
 }
 
 .button:active {
+    opacity: 1;
 }
 
 .button:disabled {
+    opacity: 0.5;
 }
 
 .text {
+    font-family: Montserrat, sans-serif;
+    color: #00000080;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 17px;
+    letter-spacing: 0em;
+    margin-bottom: 9px;
 }
 
 .greeting {
+    font-family: Montserrat, sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 17px;
+    letter-spacing: 0em;
+    text-align: left;
 }
