--- a/src/s1-main/App.module.css
+++ b/src/s1-main/App.module.css
@@ -1,7 +1,7 @@
 .App {
     --header_height: 60px;
     width: 130em;
-    margin: 0 auto;
+    margin: 50px auto;
 
 }
 
@@ -21,7 +21,3 @@
     margin-bottom: 1em;
 }
 
-/*.hw1, .hw2 {*/
-/*    max-width: 116em;*/
-/*    margin: 0 auto;*/
-/*}*/
