--- a/src/s2-homeworks/hw04/common/c3-SuperCheckbox/SuperCheckbox.module.css
+++ b/src/s2-homeworks/hw04/common/c3-SuperCheckbox/SuperCheckbox.module.css
@@ -1,8 +1,8 @@
 .label {
     display: flex;
     align-items: center;
-
     cursor: pointer;
+
 }
 
 /*input[type="checkbox"] - no*/
@@ -25,11 +25,11 @@
     border-radius: 3px;
     border: 2px solid #06c;
     cursor: pointer;
+
 }
 
 .checkbox:checked {
     appearance: none;
-
     background-image: url('checked.svg');
     /*background: #99ff99;*/
 }
@@ -39,6 +39,11 @@
 }
 
 .spanClassName {
-    font-family: 'Montserrat', sans-serif;
+    font-family: Montserrat, sans-serif;
     color: #06c;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+
 }
