--- a/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
+++ b/src/s2-homeworks/hw05/sidebar/Sidebar.module.css
@@ -1,24 +1,67 @@
 .sidebar {
+    z-index: 999;
+    width: 320px;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+    left: -320px;
+    transition: 0.6s all;
 }
 
 .sidebar.open {
+    left: 0;
+    border-radius: 10px;
+    background: #FFFFFF;
+
 }
 
 .background {
+    z-index: 9;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    background: #000000;
+    opacity: 0.3;
 }
 
 .nav {
+    display: flex;
+    flex-direction: column;
+    padding: 60px 0px 0px 70px;
 }
 
 .nav a {
+    padding-bottom: 45px;
+    font-family: Montserrat, sans-serif;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 22px;
+    line-height: 27px;
+    color: #000000;
+    text-decoration: none;
 }
 
 .nav a:hover {
+    color: #58ACFF;
 }
 
 .nav a.active {
+    color: #0059B2;
+    text-decoration: underline;
 }
+
 .close {
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    top:15px;
+    right: 24px;
+    cursor: pointer;
+    border: none;
+    background: none;
 }
 
 .close img {
