--- a/src/s2-homeworks/hw06/HW6.module.css
+++ b/src/s2-homeworks/hw06/HW6.module.css
@@ -1,5 +1,14 @@
 .buttonsContainer {
+    display: flex;
+    gap:24px;
 }
 
 .editableSpanContainer {
+    max-width: 262px;
+}
+
+.secondary {
+    color: #0066CC;
+    background: none;
+    border: 1px solid #0066CC;
 }
