--- a/src/s2-homeworks/hw03/Greeting.module.css
+++ b/src/s2-homeworks/hw03/Greeting.module.css
@@ -15,7 +15,7 @@
     color: #CC0000;
 }
 
-input {
+.input {
     width: 372px;
     height: 36px;
     border-radius: 5px;
@@ -26,13 +26,12 @@ input {
     font-size: 16px;
     font-weight: 500;
     line-height: 20px;
-    letter-spacing: 0em;
+    letter-spacing: 0;
     padding-left: 12px;
 
 }
 
 .input:focus {
-
 }
 
 .errorInput {
@@ -52,7 +51,7 @@ input {
     font-size: 14px;
     font-weight: 600;
     line-height: 20px;
-    letter-spacing: 0em;
+    letter-spacing: 0;
 }
 
 .button:focus {
@@ -73,7 +72,7 @@ input {
     font-size: 14px;
     font-weight: 400;
     line-height: 17px;
-    letter-spacing: 0em;
+    letter-spacing: 0;
     margin-bottom: 9px;
 }
 
@@ -82,6 +81,6 @@ input {
     font-size: 14px;
     font-weight: 500;
     line-height: 17px;
-    letter-spacing: 0em;
+    letter-spacing: 0;
     text-align: left;
 }
