--- a/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
+++ b/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
@@ -1,9 +1,11 @@
 .radio {
+    width: 20px;
+    height: 20px;
+    align-self: end;
 }
 
 .radio::before {
 }
-
 
 .radio:checked::before {
 }
@@ -12,4 +14,17 @@
 }
 
 .options {
+    display: flex;
+    flex-direction: column;
+    gap:22px;
+    font-family: Montserrat,sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+}
+
+.span{
+    display: inline-block;
+    padding-left: 11px;
 }
