--- a/src/s2-homeworks/hw08/HW8.module.css
+++ b/src/s2-homeworks/hw08/HW8.module.css
@@ -4,20 +4,43 @@
 .item:last-of-type {
 }
 
+.container {
+    width: 600px;
+    margin-bottom: 50px;
+}
+
 .users {
+    width: 100%;
+    font-family: Roboto, sans-serif;
+    font-style: normal;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 16px;
+    border-collapse: collapse;
 }
 
 .buttonsContainer {
+    display: flex;
+    justify-content: end;
+    gap:12px;
+    margin-bottom: 18px;
 }
 
-.container {
-}
 
 .thead {
+    background: #E5E5E5;
+    font-weight: bold;
+
 }
 
 .nameCol {
+    padding:17px 0 16px 17px;
 }
 
 .ageCol {
+
 }
+td {
+    border-bottom: 1px solid #ddd;
+}
+
