--- a/src/s2-homeworks/hw09/Clock.module.css
+++ b/src/s2-homeworks/hw09/Clock.module.css
@@ -1,14 +1,29 @@
 .buttonsContainer {
+    display: flex;
+    gap:20px
 }
 
 .clock {
+    margin-bottom: 100px;
 }
 
 .watch {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    margin-bottom: 8px;
 }
 
 .watch strong {
 }
 
 .more {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    color: rgba(0, 0, 0, 0.5);
+    margin-bottom: 27px;
+
 }
