--- a/src/s2-homeworks/hw10/Loader.module.css
+++ b/src/s2-homeworks/hw10/Loader.module.css
@@ -1,3 +1,6 @@
 .loader {
-    /*свг и/или анимация*/
+    width: 30px;
+    height: 30px;
+    background:url('./Ellipse.svg') no-repeat;
+    background-size: cover;
 }
